Working on the result handling - removed a spurious (unused) code path in the SchemaRegistry

--- a/Solutions/Corvus.Json.CodeGeneration.201909/Corvus.Json.CodeGeneration.Draft201909/Templates/CodeGenerator.Validate.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.201909/Corvus.Json.CodeGeneration.Draft201909/Templates/CodeGenerator.Validate.tt
@@ -30,6 +30,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
         if (level != ValidationLevel.Flag)
         {
             result = result.UsingStack();
+            result = result.PushSchemaLocation("<#= TypeDeclaration.LocatedSchema.Location #>");
         }
 <#  if (HasAdditionalProperties || HasUnevaluatedProperties)
     { #>
@@ -206,6 +207,11 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
             return result;
         }
 <#  } #>
+        if (level != ValidationLevel.Flag)
+        {
+            result = result.PopLocation();
+        }
+
         return result;
     }
 }
