--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Validate.Object.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Validate.Object.tt
@@ -118,8 +118,20 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
             if (__TryGetCorvusLocalPropertiesValidator(property, this.HasJsonElementBacking, out ObjectPropertyValidator? propertyValidator))
             {
                 result = result.WithLocalProperty(propertyCount);
+
+                if (level > ValidationLevel.Flag)
+                {
+                    result = result.PushDocumentProperty(property.Name);
+                }
+
                 var propertyResult = propertyValidator(property, result.CreateChildContext(), level);
                 result = result.MergeResults(propertyResult.IsValid, level, propertyResult);
+
+                if (level > ValidationLevel.Flag)
+                {
+                    result = result.PopLocation(); // property name
+                }
+
                 if (level == ValidationLevel.Flag && !result.IsValid)
                 {
                     return result;
