--- a/Solutions/Corvus.Json.CodeGeneration.6/Corvus.Json.CodeGeneration.Draft6/Templates/CodeGenerator.Validate.Array.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.6/Corvus.Json.CodeGeneration.Draft6/Templates/CodeGenerator.Validate.Array.tt
@@ -56,6 +56,11 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
 
         while (arrayEnumerator.MoveNext())
         {
+            if (level > ValidationLevel.Flag)
+            {
+                result = result.PushValidationLocationArrayIndex(arrayLength);
+            }
+
 <#      if (HasUniqueItems)
         { #>
             using var innerEnumerator = this.EnumerateArray();
@@ -160,6 +165,11 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
                     break;
                 }
 <#      } #>
+
+            if (level > ValidationLevel.Flag)
+            {
+                result = result.PopLocation(); // array index
+            }
 
             arrayLength++;
         }
