--- a/Solutions/Corvus.Json.CodeGeneration.6/Corvus.Json.CodeGeneration.Draft6/Templates/CodeGenerator.Validate.Object.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.6/Corvus.Json.CodeGeneration.Draft6/Templates/CodeGenerator.Validate.Object.tt
@@ -117,9 +117,20 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
 
             if (__TryGetCorvusLocalPropertiesValidator(property, this.HasJsonElementBacking, out ObjectPropertyValidator? propertyValidator))
             {
+                if (level > ValidationLevel.Flag)
+                {
+                    result = result.PushDocumentProperty(property.Name);
+                }
+
                 result = result.WithLocalProperty(propertyCount);
                 var propertyResult = propertyValidator(property, result.CreateChildContext(), level);
                 result = result.MergeResults(propertyResult.IsValid, level, propertyResult);
+
+                if (level > ValidationLevel.Flag)
+                {
+                    result = result.PopLocation(); // property name
+                }
+
                 if (level == ValidationLevel.Flag && !result.IsValid)
                 {
                     return result;
