--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Validate.Not.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Validate.Not.tt
@@ -33,6 +33,11 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     {
         ValidationContext result = validationContext;
 
+        if (level > ValidationLevel.Flag)
+        {
+            result = result.PushValidationLocationProperty("not");
+        }
+
         ValidationContext notResult = this.As<<#= NotDotnetTypeName #>>().Validate(validationContext.CreateChildContext(), level);
         if (notResult.IsValid)
         {
@@ -52,6 +57,11 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
         else if (level >= ValidationLevel.Basic)
         {
             result = result.MergeResults(result.IsValid, level, notResult);
+        }
+
+        if (level > ValidationLevel.Flag)
+        {
+            result = result.PopLocation(); // not
         }
 
         return result;
