--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Properties.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Properties.tt
@@ -83,46 +83,6 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
 <#  } #>
 
     /// <summary>
-    /// Tries to get the validator for the given property.
-    /// </summary>
-    /// <param name="property">The property for which to get the validator.</param>
-    /// <param name="hasJsonElementBacking"><c>True</c> if the object containing the property has a JsonElement backing.</param>
-    /// <param name="propertyValidator">The validator for the property, if provided by this schema.</param>
-    /// <returns><c>True</c> if the validator was found.</returns>
-    public bool __TryGetCorvusLocalPropertiesValidator(in JsonObjectProperty property, bool hasJsonElementBacking, [NotNullWhen(true)]out ObjectPropertyValidator? propertyValidator)
-    {
-        if (hasJsonElementBacking)
-        {
-<#  bool isFirst = true;
-    foreach (var property in LocalProperties)
-    { #>
-            <#= isFirst ? string.Empty : "else " #>if (property.NameEquals(<#= property.DotnetPropertyName #>Utf8JsonPropertyName.Span))
-            {
-                propertyValidator = __CorvusValidate<#= property.DotnetPropertyName #>;
-                return true;
-            }
-<#      isFirst = false;
-    } #>
-        }
-        else
-        {
-<#  isFirst = true;
-    foreach (var property in LocalProperties)
-    { #>
-            <#= isFirst ? string.Empty : "else " #>if (property.NameEquals(<#= property.DotnetPropertyName #>JsonPropertyName))
-            {
-                propertyValidator = __CorvusValidate<#= property.DotnetPropertyName #>;
-                return true;
-            }
-<#      isFirst = false;
-    } #>
-        }
-
-        propertyValidator = null;
-        return false;
-    }
-
-    /// <summary>
     /// Creates an instance of a <see cref="<#= TypeDeclaration.DotnetTypeName #>"/>.
     /// </summary>
     public static <#= TypeDeclaration.DotnetTypeName #> Create(
@@ -208,6 +168,46 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
         return property.ValueAs<<#= property.Type.FullyQualifiedDotnetTypeName #>>().Validate(validationContext, level);
     }
 <#  } #>
+
+    /// <summary>
+    /// Tries to get the validator for the given property.
+    /// </summary>
+    /// <param name="property">The property for which to get the validator.</param>
+    /// <param name="hasJsonElementBacking"><c>True</c> if the object containing the property has a JsonElement backing.</param>
+    /// <param name="propertyValidator">The validator for the property, if provided by this schema.</param>
+    /// <returns><c>True</c> if the validator was found.</returns>
+    private bool __TryGetCorvusLocalPropertiesValidator(in JsonObjectProperty property, bool hasJsonElementBacking, [NotNullWhen(true)]out ObjectPropertyValidator? propertyValidator)
+    {
+        if (hasJsonElementBacking)
+        {
+<#  bool isFirst = true;
+    foreach (var property in LocalProperties)
+    { #>
+            <#= isFirst ? string.Empty : "else " #>if (property.NameEquals(<#= property.DotnetPropertyName #>Utf8JsonPropertyName.Span))
+            {
+                propertyValidator = __CorvusValidate<#= property.DotnetPropertyName #>;
+                return true;
+            }
+<#      isFirst = false;
+    } #>
+        }
+        else
+        {
+<#  isFirst = true;
+    foreach (var property in LocalProperties)
+    { #>
+            <#= isFirst ? string.Empty : "else " #>if (property.NameEquals(<#= property.DotnetPropertyName #>JsonPropertyName))
+            {
+                propertyValidator = __CorvusValidate<#= property.DotnetPropertyName #>;
+                return true;
+            }
+<#      isFirst = false;
+    } #>
+        }
+
+        propertyValidator = null;
+        return false;
+    }
 }
 <# EndNesting(); #>
 <#+
