Security - clear all buffers when returning Performance - use ArrayPool.Shared.Return overload to clear buffer.

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.String.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.String.tt
@@ -283,7 +283,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonStri
             {
                 if (pooledChars is not null)
                 {
-                    ArrayPool<char>.Shared.Return(pooledChars);
+                    ArrayPool<char>.Shared.Return(pooledChars, true);
                 }
             }
         }
