--- a/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/FormattedStringType.Basics.tt
+++ b/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/FormattedStringType.Basics.tt
@@ -236,7 +236,7 @@ public readonly partial struct <#= TypeName #>
             {
                 if (pooledChars is not null)
                 {
-                    ArrayPool<char>.Shared.Return(pooledChars);
+                    ArrayPool<char>.Shared.Return(pooledChars, true);
                 }
             }
         }
