--- a/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/FormattedNumberType.Core.tt
+++ b/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/FormattedNumberType.Core.tt
@@ -287,7 +287,7 @@ public readonly partial struct <#= TypeName #> : IJsonNumber<<#= TypeName #>>
         JsonValueKind valueKind = value.ValueKind;
         return valueKind switch
         {
-            JsonValueKind.Number => new((double)value),
+            JsonValueKind.Number => new((double)value.AsNumber),
             JsonValueKind.Null => Null,
             _ => Undefined,
         };
