--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Defaults.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Defaults.tt
@@ -88,7 +88,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
 
 <#  foreach (var property in Defaults)
     { #>
-        builder.Add(<#= property.DotnetPropertyName #>JsonPropertyName, <#= property.Type.FullyQualifiedDotnetTypeName #>.DefaultInstance );
+        builder.Add(JsonPropertyNames.<#= property.DotnetPropertyName #>, <#= property.Type.FullyQualifiedDotnetTypeName #>.DefaultInstance );
 <#  } #>
         return builder.ToImmutable();
     }
