--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Number.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Number.tt
@@ -113,6 +113,27 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonNumb
     }
 
     /// <summary>
+    /// Conversion to double.
+    /// </summary>
+    /// <param name="value">The value to convert.</param>
+    /// <exception cref="InvalidOperationException">The value was not a number.</exception>
+    /// <exception cref="FormatException">The value was not formatted as a double.</exception>
+    public static explicit operator float(<#= TypeDeclaration.DotnetTypeName #> value)
+    {
+        if ((value.backing & Backing.JsonElement) != 0)
+        {
+            return value.jsonElementBacking.GetSingle();
+        }
+
+        if ((value.backing & Backing.Number) != 0)
+        {
+            return (float)value.numberBacking;
+        }
+
+        throw new InvalidOperationException();
+    }
+
+    /// <summary>
     /// Conversion from long.
     /// </summary>
     /// <param name="value">The value to convert.</param>
@@ -131,7 +152,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonNumb
     {
         if ((value.backing & Backing.JsonElement) != 0)
         {
-            return value.jsonElementBacking.GetInt64();
+            return value.jsonElementBacking.SafeGetInt64();
         }
 
         if ((value.backing & Backing.Number) != 0)
