--- a/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/FormattedStringType.Basics.tt
+++ b/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/FormattedStringType.Basics.tt
@@ -353,7 +353,7 @@ public readonly partial struct <#= TypeName #>
     /// Gets the string value.
     /// </summary>
     /// <returns><c>The string if this value represents a string</c>, otherwise <c>null</c>.</returns>
-    public string? AsOptionalString()
+    public string? GetString()
     {
         if (this.TryGetString(out string? value))
         {
