All tests pass again.

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Conversions.Operators.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Conversions.Operators.tt
@@ -51,7 +51,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
         // so we do not need to check the IsImplicitObject etc.
         if(conversion.IsObject)
         { #>
-            JsonValueKind.Object => new(value.AsImmutableList()),
+            JsonValueKind.Object => new(value.AsPropertyBacking()),
 <#      }
         if(conversion.IsArray)
         { #>
